--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Vaibhav Yadav",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1549.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -17,7 +18,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "nodemon": "^3.0.2",
-    "redis": "^4.6.12"
+    "redis": "^4.6.12",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "jest": "^29.7.0",
