--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -22,5 +22,5 @@ jobs:
           username: ubuntu
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            mkdir /home/ubuntu/vaibhav
+            mkdir /home/ubuntu/shubham
             # Add any additional deployment steps here
